// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms/Input Default 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <label
    className="label"
  >
    <span
      className="span is-hide"
    >
      Input
    </span>
    <input
      aria-label="Input"
      className="input"
      id="#1"
      placeholder="testing"
      type="text"
    />
  </label>
</div>
`;

exports[`Storyshots Atoms/Input Inline 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <label
    className="label"
  >
    <span
      className="span is-hide"
    >
      Input
    </span>
    <input
      aria-label="Input"
      className="input is-inline"
      id="#4"
      placeholder="testing"
      type="text"
    />
  </label>
</div>
`;

exports[`Storyshots Atoms/Input Is Not Hide Label 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <label
    className="label"
  >
    <span
      className="span"
    >
      Input
    </span>
    <input
      aria-label="Input"
      className="input"
      id="#5"
      placeholder="testing"
      type="text"
    />
  </label>
</div>
`;

exports[`Storyshots Atoms/Input Types 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <label
    className="label"
  >
    <span
      className="span is-hide"
    >
      Input
    </span>
    <input
      aria-label="Input"
      className="input"
      id="type-text"
      placeholder="testing"
      type="text"
    />
  </label>
</div>
`;
